# 2008-2012

./: .gitignore  fix_svn.sh
AngleVisualization/: atan.c  nose.cpp  reverse.c
CompassDrive/: CompassDrive.cpp  CompassDrive.h  MyRobot.cpp  RobotDrive.h
ControlsTest/: .project  .wrproject
DataServer/: AllocationFlags.h  DataProxyInfo.h  DataServer.cpp  DataServer.h  VariableProxy.h  VariableProxyFlags.h  main.cpp  target.vcproj  win_main.cpp
DriverStationLCDText/: DriverStationLCDTextExample.cpp
DriverStationTest/: MyRobot.cpp
Framework/: KwarqsDevices.h  KwarqsPositionTracking.h  KwarqsWheelServoBase.h
JoystickTest/: .wrproject  MyRobot.cpp
Kwarqs2012/: TODO.txt
KwarqsLib/: DataFile.h  DelayEvent.h  DelayTime.h  Deleter.h  DriverStationLCD.cpp  DriverStationLCD.h  KwarqsBCDInput.h  KwarqsConstants.h  KwarqsDriveBase.h  KwarqsDriveController.cpp  KwarqsDriveController.h  KwarqsGamePiece.cpp  KwarqsJoystick.h  KwarqsMovementControl.h  KwarqsNosePointer.h  KwarqsTelemetry.h  KwarqsWheelMotor.cpp  KwarqsWheelMotor.h  KwarqsWheelServo.cpp  KwarqsWheelServo.h  PositionInformation.cpp  PositionInformation.h  ProxiedPIDController.cpp  filters.h  (+2 more)
WebInterface/trunk/: Makefile.am  autogen.sh  main.cpp  target.vcproj
WebInterface/trunk/src/: .cproject  .project  .wrproject  DataProxyInfo.h  StaticDeleter.h  VariableProxy.h  VariableProxyFlags.h  WebInterface.cpp  WebInterface.h
WebInterface/trunk/src/server/: connection.cpp  connection.hpp  connection_manager.cpp  request_handler.cpp  request_parser.cpp
WebInterface/trunk/www/: index.html  main.js  style.css
(+776 files in other folders)
